Fixed overflow style for issue child issue's name so that user dropdown is not cut.

--- a/themes/oxygen/css/oxygen.css
+++ b/themes/oxygen/css/oxygen.css
@@ -1831,7 +1831,6 @@ a.dropper.dropdown_link:hover { border: none; text-decoration: none; }
 #issue_details fieldset a.dropper.button-pressed img { display: inline; }
 #issue_details fieldset .more_actions_dropdown li.header { border: none; margin-bottom: 0; }
 #issue_details fieldset .more_actions_dropdown li a, #issue_details fieldset ul.more_actions_dropdown li a:hover { font-size: 1em; }
-#issue_details fieldset .userdropdown { position: inherit; }
 .issue_detail_field { font-size: 1.1em; }
 .issue_detail_field dl { font-size: 0.9em; }
 .issue_detail_field:hover { background-color: rgba(200, 200, 200, 0.2); border-radius: 3px; }
@@ -3459,6 +3458,7 @@ ul.milestone_issues_container li .actions label { float: left; font-weight: 600;
 .related_issue { display: block; cursor: default; background-color: #FFF; border: 1px solid #DDD; margin: 2px; padding: 2px; font-weight: 300; }
 #related_parent_issues_inline td, #related_child_issues_inline td { font-size: 0.9em; }
 .related_issues_list li > .status_badge, .affected_item > .status_badge { font-size: 0.8em; border-radius: 4px; display: inline-block; vertical-align: middle; margin-right: 3px; line-height: 1.4; padding: 2px 4px; }
+.related_issues_list li > a > span { display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 #no_child_issues, #no_parent_issues { text-align: center; }
 #scrum_unassigned #add_story, .planning_container #add_sprint { text-align: right; padding-top: 3px; }
 #scrum_unassigned { width: 440px; border-top: 1px solid #ccc; padding: 10px 5px; vertical-align: top; }
